canary-deployment/green/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-app
  template:
    metadata:
      name: hello-green-pod
      labels:
        app: hello-app
        version: green
    spec:
      containers:
      - name: hello-container
        image: hoibui/techconserviceb:version4
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: dockerhub
