canary-deployment/green/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-green-svc
  labels:
    app: hello-app
    version: green
spec:
  selector:
    app: hello-app
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
