canary-deployment/green/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "20"
  name: green-ingress
spec:
  rules:
  - http:
      paths:
      - path: /api/techcon
        pathType: Prefix
        backend:
          service:
            name: hello-green-svc
            port:
              number: 80
